made buildable under jdk 22, removed unsafe, updated dependencies